hard-gists/1860715/run.log
=== Docker Run Log for 1860715 ===
Started at: Mi 29. Okt 12:32:01 CET 2025

[2025-10-29 12:32:01] START: Running container for 1860715
[2025-10-29 12:32:01] SUCCESS: Container 433e739b8bb251431a76e20bffebcc86829e277f1b9d401ad57e066fdf53c12e started for 1860715
=== Container logs for 1860715 ===
  File "/snippet.py", line 10
    print '\tSleeping for %d seconds' % error.sleep_time
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1860715 ===
[2025-10-29 12:32:03] INFO: Container 433e739b8bb251431a76e20bffebcc86829e277f1b9d401ad57e066fdf53c12e has stopped
